# homework_10web

./: pyproject.toml
hw_projekt/: config.py  db.sqlite3  manage.py
hw_projekt/hw_projekt/: asgi.py  settings.py  urls.py  wsgi.py
hw_projekt/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_projekt/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_projekt/quotes/static/quotes/: style.css
hw_projekt/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  quotes_by_tag.html
hw_projekt/quotes/templatetags/: extract.py
hw_projekt/users/: forms.py  urls.py  views.py
hw_projekt/users/templates/users/: login.html  logout.html  register.html
hw_projekt/utils/: add_quotes_to_mongo.py  migration.py
